[package]
name = "lockchain-core"
description = "Provides common abstractions for the lockchain crate ecoystem"
documentation = "https://docs.rs/lockchain-core"
homepage = "https://github.com/spacekookie/lockchain/tree/master/lockchain-core"
readme = "README.md"
license = "MIT/X11 OR Apache-2.0"
version = "0.9.1-alpha.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"

nix = "0.11"
pam-auth = "0.5"

base64 = "0.8"
bcrypt = "0.2"
rand = "0.4"
blake2 = "0.7"

keybob = "0.3"
