[package]
name = "lockchain-crypto"
description = "Small shim layer crate for cryptographic operations on lockchain data records"
documentation = "https://docs.rs/lockchain-crypto"
homepage = "https://github.com/spacekookie/lockchain/tree/master/lockchain-crypto"
readme = "README.md"
license = "MIT/X11 OR Apache-2.0"
version = "0.8.1-alpha.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]

[dependencies]
lockchain-core = { version = "0.9.1-alpha.0", path = "../lockchain-core" }
serde_derive = "1.0"
serde = "1.0"

miscreant = "0.4.0-beta1"