[package]
name = "lockchain-files"
description = "Filesystem storage backend for lockchain vaults"
version = "0.9.1-alpha.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]

documentation = "https://docs.rs/lockchain-files"
homepage = "https://github.com/spacekookie/lockchain/tree/master/lockchain-files"
readme = "README.md"
license = "MIT/X11 OR Apache-2.0"

[dependencies]
lockchain-core = { version = "0.9.1-alpha.0", path = "../lockchain-core" }
